# tauri-mcl

./: .gitignore  Cargo.toml  package.json
mc_launcher_core/: Cargo.toml
mc_launcher_core/src/: account.rs  config.rs  deserialize.rs  instances.rs  lib.rs  main.rs  util.rs
mc_launcher_core/src/download/: deserialize.rs  mod.rs
mc_launcher_core/src/instance/: deserialize.rs  deserialize_return_closure.rs  mod.rs
src/: Account.svelte  Add.svelte  App.svelte  Card.svelte  Download.svelte  Loader.svelte  Sidebar.svelte  Titlebar.svelte  global.d.ts  loading.scss  svelte.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: download.rs  error.rs  login.rs  main.rs  runtime.rs  state.rs  statics.rs
src-tauri/src/commands/: download.rs  login.rs
