[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = [] }
mc_launcher_core = { path = "../mc_launcher_core" }
anyhow = { version = "1.0.44", default-features = false }
tokio = { version = "1.12.0", features = ["sync"] }
lazy_static = { version = "1.4.0" }
futures = { version = "0.3.17" }
parking_lot = { version = "0.11.2" }
reqwest = { version = "0.11.6" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
